# RealRestorer

./: .gitignore  PLAN.md  README.md  app.js  evaluate_realir_bench.py  examples.html  index.html  infer_degradation.py  infer_realrestorer.py  pyproject.toml  ranking-data.js  ranking.txt  requirements.txt  showcase-data.js  styles.css
RealIR-Bench/: README.md  evaluate_fs.py  requirements.txt
RealRestorer/: export_bundle.py  inference.py
assets/: README.md
degradation_pipeline/: __init__.py  infer.py  pipeline.py  pipeline_output.py
degradation_pipeline/moire_runtime/: README.md  __init__.py  blending.py  model.py  uformer.py
degradation_pipeline/moire_runtime/assets/checkpoints/: README.md
degradation_pipeline/moire_runtime/assets/moire_patterns/: README.md
degradation_pipeline/moire_runtime/assets/real_moire/: README.md
degradation_pipeline/moire_runtime/configs/moire-blending/fhdmi/: blending_fhdmi.yaml
degradation_pipeline/moire_runtime/configs/moire-blending/tip/: blending_tip.yaml
degradation_pipeline/moire_runtime/configs/moire-blending/uhdm/: blending_uhdm.yaml
degradation_pipeline/reflection_runtime/: README.md  __init__.py  model.py  networks.py
degradation_pipeline/reflection_runtime/assets/checkpoints/: README.md
degradation_pipeline/reflection_runtime/assets/reflections/: README.md
diffusers/src/diffusers/: __init__.py
diffusers/src/diffusers/pipelines/: pipeline_utils.py
diffusers/src/diffusers/schedulers/: __init__.py  scheduling_realrestorer_flow_match.py
docs/: INSTALL.md
examples/: basic_degradation.py  basic_pretrained.py  basic_source.py
scripts/: optimize-showcase-assets.mjs
src/realrestorer_diffuser/: export_bundle.py  inference.py
(+16 files in other folders)
